2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* include/sockios/sockstream: workaround for file openmode
	for libstdc++ shipped with gcc 3.3.6.

2007-07-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* test/sockios:	boost unit test framework replaced by exam.

2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* libsockios: Version 1.12.0

2007-07-11  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: Condition replaced by condition.

2007-06-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc, sockios_test.cc: replace Locker by scoped_lock.

	* sockmgr.h, sockstream, _sockmgr.cc, _sockstream.cc: all
	Mutex replaced by mutex

2007-02-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, _sockmgr.cc: use Init technique to initialize
	static idx [thread-specific data index]---avoid global
	mutex initialization [lead to problems after fork?];
	reinitilize idx after fork;

	* libsockios: Version 1.11.0

2007-02-01  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: clean container with sockstreams,
	to force 'close' call for all connections during server
	close process; try to block some signals during close.
	
	* libsockios: Version 1.10.3

	* sockmgr.h, sockmgr.cc: start connect_processor threads
	only from 'observer' thread; threads pool managed only
	from 'observer' thread; 'observer' thread not in threads
	pool, it start from 'loop'; 
	
	* libsockios: Version 1.10.4

2007-01-31  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: really erase iterators
	from _conn_pool; remove sockstream from processing,
	if it was closed during 'connect' processing;

	* libsockios: Version 1.10.2

2006-12-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: container now single owner
	of _Connect objects; call close() and destructor of
	Connect instance incapsulated into _Connect;

2006-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: don't delete objects via _conn_pool